added basic information with no styling on nav bar and home page

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,3 +1,6 @@
+<br />
+<div>gallery of pictures</div>
+
 <p>
   The Jacksonville Community Band is currently recruiting musicians to join the band for ALL SECTIONS! WOODWINDS! BRASS!
   PERCUSSION! If you have the desire to "bring back that feeling" that came with playing in an ensemble, then now is
