--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,3 +1,7 @@
-<p>
-  nav-bar works!
-</p>
+<div class="nav">
+  <h2>Jacksonville Community Band</h2>
+  <div [routerLink]="['/']">Home</div>
+  <div [routerLink]="['/about']">About Us</div>
+  <div [routerLink]="['/contact']">Contact Us</div>
+  <div [routerLink]="['/events']">Events</div>
+</div>
