added basic format of events

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,3 +1,8 @@
-<p>
-  events works!
-</p>
+<h2>Events</h2>
+
+<div *ngFor="let event of events">
+  <h4>{{ event.name }} -- {{ event.date }}</h4>
+  <p>{{ event.description }}</p>
+  <p>where: {{ event.where }}</p>
+  <p>time: {{ event.time }}</p>
+</div>
