--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,3 +1,19 @@
+<h3>About Us</h3>
+
 <p>
-  about-us works!
+  The Jacksonville Community Band is an all-volunteer, non-profit organization created to share the gift of music with
+  the
+  entire community. The band’s musicians come from all walks of life and are drawn together by the common bond of
+  musical
+  appreciation and performance that only participation in a traditional Concert Band can provide. Founded in 1998 by the
+  late Dr. William "Bill" Moffit, the band continues to provide musical entertainment for the Greater Jacksonville
+  metropolitan and surrounding areas and gives amateur musicians an outlet through which to perform and a fantastic
+  place to make friends. The band is under the co-direction of Mr. Reginald Johnson and Mr. Jerry Carter. Both are well
+  respected musicians and instructors in the Duval County School system, Mr. Johnson and Mr. Carter are alumnus of
+  Bethune-Cookman College of Music . Mr. Carter earned his Master's degree in Music Education from Jacksonville
+  University. Mr Johnson and Mr Carter's background in music has given the band the opportunity to perform a vast
+  repertoire of pieces that are both enjoyable and challenging to play. From marches to patriotic arrangements to
+  concert band adaptations of classic masterpieces, the musicians of the Jacksonville Community Band have performed
+  virtually every genre of music imaginable
+  at venues all across the First Coast!
 </p>
