added angular material and finished navbar styling

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,22 @@
-<p>
-  contact works!
-</p>
+<h3>Contact Us</h3>
+
+<div>
+  <div>
+    Anyone, of any age, who owns a traditional band instrument and is looking for an outlet to perform, is welcome to
+    join!
+    <br />
+    Where:
+    <br />
+    St. Mark’s Lutheran Church 3976 Hendricks Ave. Jacksonville, Fl. 32207
+    (in the gymnasium in rear)
+    <br />
+    When:
+    <br />
+    Tuesday nights from 7:30-9:00pm
+    <br />
+    Bring your instrument and come join us on Tuesday nights all year-round!
+    <br />
+    To let us know you're coming or to receive more information, please complete form at right.
+  </div>
+
+</div>
