completed nav bars

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,10 +3,30 @@
   <h2>Jacksonville Community Band</h2>
 
   <span class="example-fill-remaining-space"></span>
+  <div fxShow="true" fxHide.lt-md="true">
+    <a mat-button class="nav-button" [routerLink]="['/']">Home</a>
+    <a mat-button class="nav-button" [routerLink]="['/about']">About Us</a>
+    <a mat-button class="nav-button" [routerLink]="['/contact']">Contact Us</a>
+    <a mat-button class="nav-button" [routerLink]="['/events']">Events</a>
+  </div>
 
-  <a mat-button class="nav-button" [routerLink]="['/']">Home</a>
-  <a mat-button class="nav-button" [routerLink]="['/about']">About Us</a>
-  <a mat-button class="nav-button" [routerLink]="['/contact']">Contact Us</a>
-  <a mat-button class="nav-button" [routerLink]="['/events']">Events</a>
-
+  <div fxShow="true" fxHide.gt-sm="true">
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
 </mat-toolbar>
+
+<mat-sidenav-container fxFlexFill>
+  <mat-sidenav #sidenav fxLayout="column" mode="side" opened="false">
+    <div fxLayout="column">
+      <a (click)="sidenav.toggle()" href="#" mat-button class="nav-button" [routerLink]="['/']">Home</a>
+      <a (click)="sidenav.toggle()" href="#" mat-button class="nav-button" [routerLink]="['/about']">About Us</a>
+      <a (click)="sidenav.toggle()" href="#" mat-button class="nav-button" [routerLink]="['/contact']">Contact Us</a>
+      <a (click)="sidenav.toggle()" href="#" mat-button class="nav-button" [routerLink]="['/events']">Events</a>
+    </div>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
