--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -11,7 +11,10 @@
   flex: 1 1 auto;
 }
 .mat-toolbar.mat-primary {
-  background: #007bff;
+  background: #212020;
   color: #fff;
 }
 
+.mat-sidenav-content {
+  background-color: #212020;
+}
