--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,39 +1,41 @@
-<br />
+<div class="home">
+  <br />
+  <h1 class="center">Jacksonville Community Band</h1>
 
-<h1 class="center">Jacksonville Community Band</h1>
+  <div class="grid">
+    <mat-grid-list cols="4" rowHeight="8:4">
+      <mat-grid-tile class="grid-tile" [colspan]="2" [rowspan]="2">
+        <img src="assets/band.jpg" height="100%" width="100%">
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <img src="assets/band2.jpg" height="100%" width="100%">
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <img src="assets/band2.jpg" height="100%" width="100%">
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <img src="assets/band3.jpg" height="100%" width="100%">
+      </mat-grid-tile>
+      <mat-grid-tile>
+        <img src="assets/band3.jpg" height="100%" width="100%">
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
 
-<div class="grid">
-  <mat-grid-list cols="4" rowHeight="8:4">
-    <mat-grid-tile class="grid-tile" [colspan]="2" [rowspan]="2">
-      <img src="assets/band.jpg" height="100%" width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="assets/band2.jpg" height="100%" width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="assets/band2.jpg" height="100%" width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="assets/band3.jpg" height="100%" width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="assets/band3.jpg" height="100%" width="100%">
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
+  <div class="center">
+    <p>
+      The Jacksonville Community Band is currently recruiting musicians to join the band for ALL SECTIONS! WOODWINDS!
+      BRASS!
+      PERCUSSION! If you have the desire to "bring back that feeling" that came with playing in an ensemble, then now is
+      your opportunity! There are NO AUDITIONS and musicians of all skill levels are welcome! YOU can be a part of our
+      group! If you own a traditional band instrument, then come on out to our next rehearsal to get involved!
+    </p>
+    <p>Where: St. Mark’s Lutheran Church 3976 hendricks Ave Jacksonville FL, 32207 (in the gymnasium in rear)
+      <br />
+      When: Tuesday nights from 7:30pm to 9:00pm.
+    </p>
 
-<div class="center">
-  <p>
-    The Jacksonville Community Band is currently recruiting musicians to join the band for ALL SECTIONS! WOODWINDS!
-    BRASS!
-    PERCUSSION! If you have the desire to "bring back that feeling" that came with playing in an ensemble, then now is
-    your opportunity! There are NO AUDITIONS and musicians of all skill levels are welcome! YOU can be a part of our
-    group! If you own a traditional band instrument, then come on out to our next rehearsal to get involved!
-  </p>
-  <p>Where: St. Mark’s Lutheran Church 3976 hendricks Ave Jacksonville FL, 32207 (in the gymnasium in rear)
-    <br />
-    When: Tuesday nights from 7:30pm to 9:00pm.
-  </p>
-
-  <h1>Bring your instrument and come join us on Tuesday night.</h1>
+    <h1>Bring your instrument and come join us on Tuesday night.</h1>
+  </div>
+  <br />
 </div>
