--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -1,5 +1,3 @@
-
-
 .grid {
   padding: 10px;
   width: 75%;
@@ -7,6 +5,7 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  box-shadow: black;
 }
 
 .center {
@@ -21,4 +20,13 @@ p {
   margin-right: auto;
   width: 65%;
   font-size: 20px;
+}
+
+.home {
+  color: white;
+  background-color: rgba(50, 46, 46, 0.5)
+}
+
+.content {
+  background: rgba(50, 46, 46, 0.5);
 }
