completed styling for all pages

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,8 +1,12 @@
-<h2>Events</h2>
-
+<div>
+<br />
+<h1 class="title">Events</h1>
+<div class="center">
 <div *ngFor="let event of events">
-  <h4>{{ event.name }} -- {{ event.date }}</h4>
-  <p>{{ event.description }}</p>
-  <p>where: {{ event.where }}</p>
-  <p>time: {{ event.time }}</p>
+  <p>{{ event.name }} -- {{ event.date }}</p>
+  <p>Where: {{ event.where }}</p>
+  <p>Time: {{ event.time }}</p>
+</div>
+</div>
+<br />
 </div>
