--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,6 +1,9 @@
-<h1 class="center">About Us</h1>
+<div>
+    <br />
+<h1 class="title">About Us</h1>
 
-<p class="center">
+<div class="center">
+<p>
   The Jacksonville Community Band is an all-volunteer, non-profit organization created to share the gift of music with
   the
   entire community. The band’s musicians come from all walks of life and are drawn together by the common bond of
@@ -8,7 +11,7 @@
   appreciation and performance that only participation in a traditional Concert Band can provide.
 </p>
 
-<p class="center">
+<p>
   Founded in 1998 by the late <a target="_blank" href="https://en.wikipedia.org/wiki/Bill_Moffit">Dr. William "Bill"
     Moffit</a>, the
   band continues to provide musical entertainment for the
@@ -16,7 +19,7 @@
   and a fantastic place to make friends.
 </p>
 
-<p class="center">
+<p>
   The band is under the co-direction of Mr. Reginald Johnson and Mr. Jerry Carter. Both are well respected musicians and
   instructors in the Duval County School system, Mr. Johnson and Mr. Carter are alumnus of <a target="_blank"
     href="http://www.vandercook.edu/">Bethune-Cookman College of Music</a>. Mr. Carter earned his Master's degree in
@@ -25,3 +28,5 @@
   patriotic arrangements to concert band adaptations of classic masterpieces, the musicians of the Jacksonville
   Community Band have performed virtually every genre of music imaginable at venues all across the First Coast!
 </p>
+</div>
+</div>  
