--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -1,11 +1,26 @@
-p {
-  width: 75%;
-  font-size: 20px
-}
-
 .center {
   display: block;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  background-color: rgba(61, 60, 60, 0.5);
+}
+
+.title {
+  display: block;
+  text-align: center;
+}
+
+p {
+  display: block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+a {
+  color: white;
 }
