--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,22 +1,19 @@
-<h3>Contact Us</h3>
+<div class="background">
+  <br />
+<h1 class="title">Contact Us</h1>
 
-<div>
-  <div>
+<div class="center">
     Anyone, of any age, who owns a traditional band instrument and is looking for an outlet to perform, is welcome to
     join!
     <br />
-    Where:
+    Where: Terry Parker Baptist 7024 Merrill Rd, Jacksonville, FL 32277
     <br />
-    St. Mark’s Lutheran Church 3976 Hendricks Ave. Jacksonville, Fl. 32207
-    (in the gymnasium in rear)
-    <br />
-    When:
-    <br />
-    Tuesday nights from 7:30-9:00pm
+    When: Tuesday nights from 7:30-9:00pm
     <br />
     Bring your instrument and come join us on Tuesday nights all year-round!
     <br />
-    To let us know you're coming or to receive more information, please complete form at right.
-  </div>
-
+    To let us know you're coming or to receive more information, email Jenny Kosar Band President. 
+    <br />
+    jkosar25@att.net
+</div>
 </div>
