--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
-<div class="home">
+<div>
   <br />
-  <h1 class="center">Jacksonville Community Band</h1>
+  <h1 class="title">Jacksonville Community Band</h1>
 
   <div class="grid">
     <mat-grid-list cols="4" rowHeight="8:4">
@@ -22,7 +22,8 @@
     </mat-grid-list>
   </div>
 
-  <div class="center">
+
+    <div class="center">
     <p>
       The Jacksonville Community Band is currently recruiting musicians to join the band for ALL SECTIONS! WOODWINDS!
       BRASS!
@@ -30,12 +31,11 @@
       your opportunity! There are NO AUDITIONS and musicians of all skill levels are welcome! YOU can be a part of our
       group! If you own a traditional band instrument, then come on out to our next rehearsal to get involved!
     </p>
-    <p>Where: St. Mark’s Lutheran Church 3976 hendricks Ave Jacksonville FL, 32207 (in the gymnasium in rear)
+    <p>Where: Terry Parker Baptist 7024 Merrill Rd, Jacksonville, FL 32277
       <br />
       When: Tuesday nights from 7:30pm to 9:00pm.
     </p>
 
-    <h1>Bring your instrument and come join us on Tuesday night.</h1>
-  </div>
-  <br />
+    <h2>Bring your instrument and come join us on Tuesday night.</h2>
+    </div>
 </div>
