--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -5,12 +5,17 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  box-shadow: black;
 }
 
 .center {
  display: block;
  text-align: center;
+ background-color: rgba(61, 60, 60, 0.5);
+}
+
+.title {
+  display: block;
+  text-align: center;
 }
 
 p {
@@ -19,14 +24,7 @@ p {
   margin-left: auto;
   margin-right: auto;
   width: 65%;
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: 500;
 }
 
-.home {
-  color: white;
-  background-color: rgba(50, 46, 46, 0.5)
-}
-
-.content {
-  background: rgba(50, 46, 46, 0.5);
-}
