changed the css of the events and contact components

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,18 +2,17 @@
   <br />
 <h1 class="title">Contact Us</h1>
 
-<div class="center">
-    Anyone, of any age, who owns a traditional band instrument and is looking for an outlet to perform, is welcome to
-    join!
-    <br />
-    Where: Terry Parker Baptist 7024 Merrill Rd, Jacksonville, FL 32277
-    <br />
-    When: Tuesday nights from 7:30-9:00pm
-    <br />
-    Bring your instrument and come join us on Tuesday nights all year-round!
-    <br />
-    To let us know you're coming or to receive more information, email Jenny Kosar Band President. 
-    <br />
-    jkosar25@att.net
-</div>
+<mat-list class="center">
+  <mat-list-item class="text">
+    <h2 matLine class="heading">Anyone, of any age, who owns a traditional band instrument and is looking for an outlet to perform, is welcome to join!</h2>
+    <p matLine class="heading">When: Tuesday nights from 7:30-9:00pm</p>
+    <p matLine class="heading">Where: Terry Parker Baptist 7024 Merrill Rd, Jacksonville, FL 32277</p>
+  </mat-list-item>
+    <mat-divider></mat-divider>
+  <mat-list-item class="text">
+    <h2 matLine class="heading">To let us know you're coming or to receive more information, email Jenny Kosar, Band President.</h2>
+    <p matLine class="heading"><a href="jkosar25@att.net">jkosar25@att.net</a> or <a href="jacksonvillecommunityband@gmail.com">jacksonvillecommunityband@gmail.com</a></p>
+    <p matLine class="heading">Bring your instrument and music stand, and come join us on Tuesday nights all year-round!</p>
+  </mat-list-item>
+</mat-list>
 </div>
