--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -6,6 +6,8 @@
     background-color: rgba(61, 60, 60, 0.5);
     font-size: 20px;
     font-weight: 500;
+    width: 70%;
+    border-radius: 10px;
   }
   
   .title {
@@ -13,3 +15,18 @@
     text-align: center;
   }
   
+  .text {
+    text-align: left;
+  }
+
+  .heading {
+    font-size: 16px !important;
+  }
+
+  .footer {
+    font-size: 20px !important;
+  }
+
+  a {
+    color: white;
+  }
