--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -6,6 +6,8 @@
     background-color: rgba(61, 60, 60, 0.5);
     font-size: 20px;
     font-weight: 400;
+    width: 70%;
+    border-radius: 10px;
   }
   
   .title {
@@ -13,3 +15,20 @@
     text-align: center;
   }
  
+  .text {
+    text-align: left;
+  }
+
+  .heading {
+    font-size: 25px !important;
+    color: red;
+    font-weight: bold !important;
+  }
+
+  .where {
+    color: rgb(8, 8, 153) !important;
+  }
+
+  p {
+    font-size: 20px !important;
+  }
