finished people page and switched list styling

--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -1,3 +1,55 @@
-<p>
-  people works!
-</p>
+    <br />
+<div class="flex">
+  <div class="background">
+  <mat-list>
+    <mat-list-item>
+      <h1 matLine class="heading">Conductors</h1>
+    </mat-list-item>
+      <mat-divider></mat-divider>
+    <mat-list-item class="text">
+      <h2 matLine >Reginald Johnson</h2>
+    </mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item class="text">
+        <h2 matLine >Jerry Carter</h2>
+      </mat-list-item>
+  </mat-list>
+</div>
+<div class="background">
+  <mat-list class="center">
+      <mat-list-item class="text">
+        <h1 matLine class="heading">Board of Directors</h1>
+      </mat-list-item>
+        <mat-divider></mat-divider>
+      <mat-list-item class="text">
+        <h2 matLine>Jenny kosar</h2>
+        <p matLine>President</p>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item class="text">
+          <h2 matLine>Blimp Davis</h2>
+          <p matLine>Vice President</p>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item class="text">
+          <h2 matLine >Bruce Schwartz</h2>
+          <p matLine>Secretary</p>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item class="text">
+          <h2 matLine >Dave Suk</h2>
+          <p matLine>Treasurer</p>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item class="text">
+          <h2 matLine >Paul Jones</h2>
+          <p matLine>Librarian</p>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+      <mat-list-item class="text">
+          <h2 matLine >Morgan Grace</h2>
+          <p matLine>Web Designer</p>
+      </mat-list-item>
+    </mat-list>
+  </div>
+</div>
