--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,7 +3,7 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(61, 60, 60, 0.5);
+    background-color: rgba(61, 60, 60);
     font-size: 20px;
     font-weight: 500;
     width: 70%;
