--- a/src/app/events/events.component.scss
+++ b/src/app/events/events.component.scss
@@ -3,7 +3,7 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(61, 60, 60, 0.5);
+    background-color: rgba(61, 60, 60);
     font-size: 20px;
     font-weight: 400;
     width: 70%;
@@ -26,7 +26,7 @@
   }
 
   .where {
-    color: rgb(8, 8, 153) !important;
+    color: rgb(33, 33, 199) !important;
   }
 
   p {
