Updates to gallery and incorporated s3 bucket

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,40 +1,68 @@
 <div class="gallery">
-  <mat-grid-list cols="4" rowHeight="8:4">
-    <mat-grid-tile class="grid-tile" [colspan]="2" [rowspan]="2">
-      <img src="assets/band1.jpg" height="100%" width="100%">
+  <mat-grid-list cols="4" rowHeight="2:1">
+    <mat-grid-tile>
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
+        width="100%">
+    </mat-grid-tile>
+    <mat-grid-tile class="grid-tile">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201709.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band2.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201722.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band3.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201122.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band4.jpg" height="100%" width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile [colspan]="1" [rowspan]="2">
-      <img src="assets/band10.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200750.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band6.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200611.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band7.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201404.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band8.jpg" height="100%" width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile [colspan]="2" [rowspan]="1">
-      <img src="assets/band4.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200818.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band10.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200658.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
     <mat-grid-tile>
-      <img src="assets/band11.jpg" height="100%" width="100%">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200651.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
-    <mat-grid-tile [colspan]="4" [rowspan]="1">
-      <img src="assets/band12.jpg" height="100%" width="100%">
+    <mat-grid-tile>
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200636.jpg" height="100%"
+        width="100%">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201154.jpg" height="100%"
+        width="100%">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200539.jpg" height="100%"
+        width="100%">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_195741.jpg" height="100%"
+        width="100%">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201435.jpg" height="100%"
+        width="100%">
+    </mat-grid-tile>
+    <mat-grid-tile>
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200747.jpg" height="100%"
+        width="100%">
     </mat-grid-tile>
   </mat-grid-list>
 </div>
