--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,19 +5,24 @@
   <div class="grid">
     <mat-grid-list cols="4" rowHeight="8:4">
       <mat-grid-tile class="grid-tile" [colspan]="2" [rowspan]="2">
-        <img src="assets/band13.jpg" height="100%" width="100%">
+        <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190706_111441.jpg" height="100%"
+          width="100%">
       </mat-grid-tile>
       <mat-grid-tile>
-        <img src="assets/band14.jpg" height="100%" width="100%">
+        <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200818.jpg" height="100%"
+          width="100%">
       </mat-grid-tile>
       <mat-grid-tile>
-        <img src="assets/band15.jpg" height="100%" width="100%">
+        <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200747.jpg" height="100%"
+          width="100%">
       </mat-grid-tile>
       <mat-grid-tile>
-        <img src="assets/band16.jpg" height="100%" width="100%">
+        <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200611.jpg" height="100%"
+          width="100%">
       </mat-grid-tile>
       <mat-grid-tile>
-        <img src="assets/band1.jpg" height="100%" width="100%">
+        <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200651.jpg" height="100%"
+          width="100%">
       </mat-grid-tile>
     </mat-grid-list>
   </div>
@@ -37,5 +42,7 @@
     </p>
 
     <h2>Bring your instrument and come join us on Tuesday night.</h2>
+    <br />
+    <h1>No practice until the last Tuesday of August</h1>
   </div>
 </div>
