fixed gallery pictures and made it responsive

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,68 +1,148 @@
-<div class="gallery">
-  <mat-grid-list cols="4" rowHeight="2:1">
-    <mat-grid-tile>
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile class="grid-tile">
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201709.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+<div fxShow="true" fxHide.lt-md="true">
+  <div layout="row">
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200818.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201722.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201122.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+    </div>
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200750.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200750.jpg" height="100%"
+        width="100%">
+    </div>
+    <div fxFlex class="image">
+      <img class="orientation" src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201404.jpg"
+        height="100%" width="57%">
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200611.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201404.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200818.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200658.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+    </div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200658.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200651.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+    </div>
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200636.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201154.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200539.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+    </div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200539.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_195741.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
-      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201435.jpg" height="100%"
-        width="100%">
-    </mat-grid-tile>
-    <mat-grid-tile>
+    </div>
+    <div fxFlex class="image">
       <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200747.jpg" height="100%"
         width="100%">
-    </mat-grid-tile>
-  </mat-grid-list>
+    </div>
+  </div>
+</div>
+
+
+<div fxShow="true" fxHide.gt-sm="true">
+  <div layout="row">
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200818.jpg" height="100%"
+        width="100%"></div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201722.jpg" height="100%"
+        width="100%">
+    </div>
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200750.jpg" height="100%"
+        width="100%">
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
+        width="100%"></div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_201032.jpg" height="100%"
+        width="100%">
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200750.jpg" height="100%"
+        width="100%">
+    </div>
+    <div fxFlex class="image">
+      <img class="orientation" src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201404.jpg"
+        height="100%" width="57%">
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200611.jpg" height="100%"
+        width="100%">
+    </div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200658.jpg" height="100%"
+        width="100%">
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200651.jpg" height="100%"
+        width="100%">
+    </div>
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200636.jpg" height="100%"
+        width="100%">
+    </div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190625_201154.jpg" height="100%"
+        width="100%">
+    </div>
+    <div fxFlex class="image"><img
+        src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200539.jpg" height="100%"
+        width="100%"></div>
+  </div>
+  <div layout="row">
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_195741.jpg" height="100%"
+        width="100%">
+    </div>
+    <div fxFlex class="image">
+      <img src="https://jacksonvillecommunityband.s3.us-east-2.amazonaws.com/20190702_200747.jpg" height="100%"
+        width="100%">
+    </div>
+  </div>
 </div>
