--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -23,7 +23,7 @@
   background-image: url("../../assets/sheetmusic1.jpg");
   background-size: cover;
   background-repeat: none;
-  overflow: visible;
+  overflow: auto;
   height: 100%;
 }
 
