--- a/src/app/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery.component.scss
@@ -1,3 +1,19 @@
 mat-grid-list {
   height: 100%;
 }
+
+.orientation {
+   -webkit-transform: rotate(90deg);
+   -moz-transform: rotate(90deg);
+   -o-transform: rotate(90deg);
+   -ms-transform: rotate(90deg);
+   transform: rotate(90deg);
+}
+
+.flex {
+  display: flex;
+}
+
+.image {
+  padding: 4px;
+}
