added updates to website

--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -4,9 +4,12 @@
 
 <mat-list class="center">
   <mat-list-item class="text">
-    <h2 matLine class="heading">Fourth of July Concert</h2>
-    <p matLine>When: 7/6/2019 at 11:00 AM</p>
-    <p matLine class="where">Where: Terry Parker Baptist 7024 Merrill Rd, Jacksonville, FL 32277</p>
+    <p matLine>When: Saturday March 7th at 2:00 PM</p>
+    <p matLine class="where">Where: Taylor Residences, 6601 Chester Ave, Jacksonville, FL 32217</p>
+  </mat-list-item>
+  <mat-list-item class="text">
+    <p matLine>When: March 17th at 2:00 PM</p>
+    <p matLine class="where">Where: River Gardens, 11401 Old St Augustine Rd, Jacksonville, FL 32258</p>
   </mat-list-item>
 </mat-list>
 
