--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,5 @@
-<div>
-  <br />
+<div class="home">
+
   <h1 class="title">Jacksonville Community Band</h1>
 
   <div class="grid">
@@ -27,7 +27,6 @@
     </mat-grid-list>
   </div>
 
-
   <div class="center">
     <p>
       The Jacksonville Community Band is currently recruiting musicians to join the band for ALL SECTIONS! WOODWINDS!
@@ -43,6 +42,5 @@
 
     <h2>Bring your instrument and come join us on Tuesday night.</h2>
     <br />
-    <h1>No practice until the last Tuesday of August</h1>
   </div>
 </div>
