--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -11,6 +11,8 @@
  display: block;
  text-align: center;
  background-color: rgba(61, 60, 60, 0.6);
+ padding-top: 20px;
+ margin-top: 20px;
 }
 
 .title {
@@ -28,3 +30,6 @@ p {
   font-weight: 500;
 }
 
+.main {
+  background-color: white;
+}
