Removed reference to old band director and changed month in events

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -20,13 +20,13 @@
 </p>
 
 <p>
-  The band is under the co-direction of Mr. Reginald Johnson and Mr. Jerry Carter. Both are well respected musicians and
-  instructors in the Duval County School system, Mr. Johnson and Mr. Carter are alumnus of <a target="_blank"
+  The band is under the direction of Mr. Jerry Carter. He is a well respected musician and
+  instructor in the Duval County School system, Mr. Carter is an  alumnus of <a target="_blank"
     href="http://www.vandercook.edu/">Bethune-Cookman College of Music</a>. Mr. Carter earned his Master's degree in
-  Music Education from Jacksonville University. Mr. Johnson and Mr. Carter's background in music has given the band the
+  Music Education from Jacksonville University. Mr. Carter's background in music has given the band the
   opportunity to perform a vast repertoire of pieces that are both enjoyable and challenging to play. From marches to
   patriotic arrangements to concert band adaptations of classic masterpieces, the musicians of the Jacksonville
   Community Band have performed virtually every genre of music imaginable at venues all across the First Coast!
 </p>
 </div>
-</div>  
+</div>
