--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -5,11 +5,11 @@
 <mat-list class="center">
   <mat-list-item class="text">
     <p matLine>When: Saturday March 7th at 2:00 PM</p>
-    <p matLine class="where">Where: Taylor Residences, 6601 Chester Ave, Jacksonville, FL 32217</p>
+    <p matLine >Where: Taylor Residences, 6601 Chester Ave, Jacksonville, FL 32217</p>
   </mat-list-item>
   <mat-list-item class="text">
-    <p matLine>When: March 17th at 2:00 PM</p>
-    <p matLine class="where">Where: River Gardens, 11401 Old St Augustine Rd, Jacksonville, FL 32258</p>
+    <p matLine>When: May 17th at 2:00 PM</p>
+    <p matLine >Where: River Gardens, 11401 Old St Augustine Rd, Jacksonville, FL 32258</p>
   </mat-list-item>
 </mat-list>
 
